--- a/style.css
+++ b/style.css
@@ -1,22 +1,27 @@
 
 
 header {
-    padding: 40px;
+    padding: 1% 1% 0 1%;
     justify-content: space-between;
-    background-color: cadetblue;
+    align-items: center;
+    background-color: rgb(65, 62, 62);
+    color: rgb(48, 238, 238);
     display: flex;
 }
 
 nav {
     text-align: right;
+    /* flex-wrap: wrap; */
+    /* font-size: 20px; */
+    display: block;
     
-    flex-wrap: wrap;
-    font-size: 20px;
-    background-color: burlywood;
 }
 
-nav a {
-    padding: 14px 20px;
+nav ul li a {
     text-decoration: none;
-    text-align: right;
+    text-align: end;
+    color: turquoise;
+    /* margin: 5%; */
+    padding-left: 20px;
+    font-size: 20px;
 }
