--- a/style.css
+++ b/style.css
@@ -9,19 +9,14 @@ header {
     display: flex;
 }
 
-nav {
-    text-align: right;
-    /* flex-wrap: wrap; */
-    /* font-size: 20px; */
+nav ul {
+    text-align: end;
+    color: teal
     display: block;
-    
+    font-size: 20px;      
 }
 
-nav ul li a {
-    text-decoration: none;
-    text-align: end;
-    color: turquoise;
-    /* margin: 5%; */
-    padding-left: 20px;
-    font-size: 20px;
+nav ul li {
+    display: inline;
+    padding: 5px;
 }
