--- a/style.css
+++ b/style.css
@@ -1,22 +1,63 @@
 
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;;
+}
+
+body {
+    background-color: #d9dcd6;
+}
 
 header {
-    padding: 1% 1% 0 1%;
+    padding: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #2a607c;
+    color: #ffffff;
     justify-content: space-between;
-    align-items: center;
-    background-color: rgb(65, 62, 62);
-    color: rgb(48, 238, 238);
-    display: flex;
+    flex: wrap;
 }
 
-nav ul {
-    text-align: end;
-    color: teal
-    display: block;
-    font-size: 20px;      
+header h1 {
+    display: inline-block;
+    font-size: 50px;
 }
 
-nav ul li {
-    display: inline;
-    padding: 5px;
+header nav {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
 }
+    
+header nav ul {
+    list-style-type: none;
+}
+    
+header nav ul li {
+    display: inline-block;
+    margin-left: 25px;
+}
+
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.subtitle {
+    height: 300px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("https://media.istockphoto.com/photos/power-of-big-data-binary-code-information-bit-on-computer-monitor-picture-id1010690668?k=20&m=1010690668&s=612x612&w=0&h=y0u_QXWQWE1eRQwTYw8Pyifk6LG0aADpZwOuPeZ9dck=");
+    background-size: cover;
+    background-position: center;  
+}
+
+.subtitle h2 {
+    font-size: 40px;
+    color: #ffffff;
+    text-align: center;
+    bottom: 20;
+}
+
